<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.more.profile.editProfile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:background="@color/base_app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:fontFamily="@font/regular"
            android:text="@string/personal_info"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgback"
            app:layout_constraintStart_toEndOf="@+id/imgback"
            app:layout_constraintTop_toTopOf="@+id/imgback" />

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25dp"
        android:layout_marginTop="@dimen/_30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/avatar"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_16sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/no_image_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/full_name"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_16sp" />


        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_12dp"
            android:background="@drawable/input_box"
            android:fontFamily="@font/medium"
            android:hint="@string/please_enter_your_full_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textDirection="anyRtl"
            android:textAlignment="viewStart"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingTop="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/medium"
            android:text="@string/e_mail"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_16sp" />


        <EditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_12dp"
            android:background="@drawable/input_box"
            android:fontFamily="@font/medium"
            android:textAlignment="viewStart"
            android:hint="@string/please_enter_your_email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingTop="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp"
            android:textColor="@color/black"
            android:textDirection="anyRtl"
            android:textSize="@dimen/_12sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/medium"
            android:text="@string/phone_number"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_16sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_12dp"
            android:background="@drawable/input_box">

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_20dp"
                android:fontFamily="@font/medium"
                android:text="@string/confirm"
                android:textColor="@color/green"
                android:textSize="@dimen/_14sp"

                />

            <include
                android:id="@+id/includePhone"
                layout="@layout/view_phone_num_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_60dp" />
        </FrameLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_50dp"
        android:fontFamily="@font/medium"
        android:paddingStart="@dimen/_20dp"
        android:paddingTop="@dimen/_14dp"
        android:paddingEnd="@dimen/_20dp"
        android:paddingBottom="@dimen/_16dp"
        android:text="@string/save_chnages"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:backgroundTint="@color/base_app_color"
        app:cornerRadius="@dimen/_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>