<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView133"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/medium"
        android:text="@string/choose_class"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toggleClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_27443"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_5dp"
        android:paddingEnd="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView133">

        <TextView
            android:id="@+id/btnEconomy"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:background="@drawable/bg_white_selector"
            android:textColor="@color/app_black"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/economy"
            android:textAlignment="center"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/btnPremium"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/premium"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/btnBusinessMen"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/business_men"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/btnBusiness"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:layout_gravity="center_vertical|center"
            android:layout_marginStart="@dimen/_2dp"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/business"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>