<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/medium"
        android:text="@string/choose_trip_type"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_26731"
        android:paddingStart="@dimen/_5dp"
        android:paddingEnd="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18">

        <TextView
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/medium"
            android:text="@string/go_only"
            android:gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/btnGoAndBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25dp"
            android:gravity="center"
            android:layout_gravity="center_vertical|center"
            android:background="@drawable/bg_white_selector"
            android:fontFamily="@font/medium"
            android:layout_weight="3"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_2dp"
            android:text="@string/go_and_return"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>